tests/NormalTests/paczka1/fuzzy1/62475492.err
Error in line 8: 8nQMw A856 65,7
Error in line 3: ZPLJE8OU A856 76,5
Error in line 11: ZPLJE8OU A419 28,3
Error in line 21: ZPLJE8OU A419 67,8
Error in line 32: A419 S422 73,1
